--- a/forside.html
+++ b/forside.html
@@ -13,8 +13,8 @@
 <body>
     <div id="forside">
         <video src="videoer/stjernehimmel.mp4" autoplay muted loop></video>
-        <img src="billeder/stjernensliv.png" alt="overskrift">
-        <a>START</a>
+        <img src="billeder/stjernensliv.png" id="stjernensliv" alt="overskrift">
+        <a href="#">START</a>
     </div>
 </body>
     
