--- a/stjernehob.html
+++ b/stjernehob.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Darker+Grotesque:wght@300..900&family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oxanium:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="forside">
-        <video src="videoer/stjernehimmel.mp4" autoplay muted loop></video>
-        <a>STJERNEHOB</a>
+    <div id="stjernehob">
+        <video src="videoer/stjernehob.mp4" autoplay muted loop></video>
+        <a id="stjernehobBtn">STJERNEHOB</a>
     </div>
 </body>
     
